Formalize DuplicatingDecomposition